@@ -1,4 +1,5 @@
 HEAD
+	+ Don't allow to remove outgoing mail virtual domain
 	+ Added rpcproxy service
 	+ Clean all previous data before enabling the module
 3.2.5
